// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createExecution should create correct definition for scoped series only 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": Object {},
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`createExecution should create correct definition for scoped series with slicing 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": Object {},
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`createExecution should create correct definition for scoped series with slicing and filter 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [
    Object {
      "positiveAttributeFilter": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "in": Object {
          "values": Array [
            "CompuSci",
          ],
        },
      },
    },
  ],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": Object {},
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`createExecution should create correct definition for scoped series with slicing and sortBy 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": Object {},
  "sortBy": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a_label.product.id.name",
        "direction": "desc",
      },
    },
  ],
  "workspace": "testWorkspace",
}
`;

exports[`createExecution should create correct definition for scoped series with slicing and totals 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
      "totals": Array [
        Object {
          "attributeIdentifier": "a_label.product.id.name",
          "measureIdentifier": "m_aangOxLSeztu",
          "type": "sum",
        },
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": Object {},
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`createExecution should create correct definition for unscoped series only 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": Object {},
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`createExecution should create correct definition for unscoped series only with only attributes (RAIL-4265) 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [],
  "postProcessing": Object {},
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`createExecution should create correct definition for unscoped series with slicing 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": Object {},
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;
